--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -7,8 +7,10 @@
 <body>
 	<ul >
 		<li ><a href="/">Navbar</a></li>
+		<li ><a href="/secret">Secret</a></li>
         <li ><a href="/register">Sign Up</a></li>
         <li ><a href="/login">Log In</a></li>
+        <li ><a href="/logout">Log Out</a></li>
       </ul>
 	
 </body>
